--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -250,15 +250,12 @@
 
         <div class="other-controls">
             <div class="menu"> <!-- More Options -->
-                <i class="fas fa-ellipsis-v"></i>
-                <i class="fas fa-bars"></i>
+                <i class="fa-solid fa-bars"></i>
             </div>
             <div class="volume">
-                <i class="fas fa-volume-mute" id="volume-mute" style="display: none;"></i> <!-- Mute -->
-                <i class="fas fa-volume-down" id="volume-one" style="display: none;"></i> <!-- Low Volume -->
-                <i class="fas fa-volume-up" id="volume-three" style="display: block;"></i> <!-- High Volume -->
-                <div class="progress-bar">
-                    <div class="progress"></div>
+                <i class="fa-solid fa-volume-high"></i>
+                <div class="volume-bar">
+                    <input type="range" class="slider" min = "0" max = "100" value = "0">
                 </div>
             </div>
         </div>
