--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -238,6 +238,7 @@
                 <input type="range" class="slider" min = "0" max = "100" value = "0">
                 <div class="totalTime font-inter">2:40</div>
             </div>
+        
             <div class="controls">
                 <i class="fas fa-random shuffle"></i> <!-- Shuffle -->
                 <i class="fas fa-step-backward reverse"></i> <!-- Reverse -->
@@ -260,6 +261,20 @@
             </div>
         </div>
     </footer>
-</body>
 
+    <div class="playlist">
+        <div class="songTile">
+            <p class="font-inter">1. SONG 1</p>
+        </div>
+        <div class="songTile">
+            <p class="font-inter">1. SONG 1</p>
+        </div>
+        <div class="songTile">
+            <p class="font-inter">1. SONG 1</p>
+        </div>
+        <div class="songTile">
+            <p class="font-inter">1. SONG 1</p>
+        </div>
+    </div>
+</body>
 </html>
