--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -37,7 +37,8 @@
 
     <link rel="stylesheet" href="HomePage.css" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="../modular_styles/profileStyles.css" media="print" onload="this.media='all'">
-    <script src="../scripts/music.js" defer></script>
+    <script src="../scripts/script.js" defer></script>
+    <script src="../scripts/music.js"></script>
 </head>
 
 <body>
@@ -243,7 +244,7 @@
             <div class="controls">
                 <i class="fas fa-random shuffle" id = "shufBtn"></i> <!-- Shuffle -->
                 <i class="fas fa-step-backward reverse" id = "prevBtn"></i> <!-- Reverse -->
-                <i class="fas fa-play play" style="padding-right: 4px;" id = "playBtn"></i> <!-- Play -->
+                <i class="fa-solid fa-play" id = "playBtn"></i> <!-- Play -->
                 <i class="fas fa-step-forward forward" id = "fwdBtn"></i> <!-- Forward -->
                 <i class="fa-solid fa-repeat repeat" id = "repBtn"></i> <!-- Repeat -->
             </div>
