--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -242,11 +242,11 @@
             </div>
         
             <div class="controls">
-                <i class="fas fa-random shuffle" id = "shufBtn"></i> <!-- Shuffle -->
-                <i class="fas fa-step-backward reverse" id = "prevBtn"></i> <!-- Reverse -->
-                <i class="fa-solid fa-play" id = "playBtn"></i> <!-- Play -->
-                <i class="fas fa-step-forward forward" id = "fwdBtn"></i> <!-- Forward -->
-                <i class="fa-solid fa-repeat repeat" id = "repBtn"></i> <!-- Repeat -->
+                <button class="controlBtns" id = "shufBtn"><i class="fas fa-random shuffle"></i></button> <!-- Shuffle -->
+                <button class="controlBtns" id = "prevBtn"><i class="fas fa-step-backward reverse"></i></button> <!-- Reverse -->
+                <button class="controlBtns" id = "playBtn"><i class="fa-solid fa-play"></i></button> <!-- Play -->
+                <button class="controlBtns" id = "fwdBtn"><i class="fas fa-step-forward forward"></i></button> <!-- Forward -->
+                <button class="controlBtns" id = "repBtn"><i class="fa-solid fa-repeat repeat"></i></button> <!-- Repeat -->
             </div>
         </div>
 
