--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="../modular_styles/profileStyles.css" media="print" onload="this.media='all'">
     <script src="../scripts/script.js" defer></script>
     <script src="../scripts/music.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="../assets/browserIcon.ico" />
 </head>
 
 <body>
@@ -183,9 +184,9 @@
             <div id="album-list">
                 <div class="album-row">
                     <div class="album-row-item">
-                        <img src="../assets/home/Album Cover - 1.png" class="album-cover"
-                            alt="Album Cover: The Queen Is Dead" width="145px" height="145px">
-                        <p class="album-title font-syne">The Queen Is Dead</p>
+                        <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="album-cover"
+                            alt="Album Cover: Veer Zaara" width="145px" height="145px">
+                        <p class="album-title font-syne">Veer Zaara</p>
                     </div>
                     <div class="album-row-item">
                         <img src="../assets/home/Album Cover - 2.png" class="album-cover" alt="Album Cover: Abbey Road"
@@ -260,7 +261,7 @@
                     <input id = "volBar" type="range" class="slider" min = "0" max = "100" value = "0">
                 </div>
             </div>
-        </div>
+        </div>  
     </footer>
 
     <div class="playlist">
