--- a/src/pages/ProfilePage.html
+++ b/src/pages/ProfilePage.html
@@ -50,15 +50,20 @@
         </div>
     </nav>
 
-    <main class="expanded-profile">
-        <div class="profile-pic">
-            <img src="../assets/Shrey Jaiswal Pic.png" alt="Profile Image" width="400px" height="400px">
+    <div class="row1">
+        <main class="expanded-profile">
+            <div class="profile-pic">
+                <img src="../assets/Shrey Jaiswal Pic.png" alt="Profile Image" width="400px" height="400px">
+            </div>
+            <div class="details-container font-syne">
+                <h1 class="username">Shrey Jaiswal</h1>
+                <h5 class="usermail">shrey.jaiswal.23cse@bmu.edu.in</h5>
+            </div>
+        </main>
+        <div class="likedsongs">
+            <img src="../assets/Liked Songs Logo.png">
         </div>
-        <div class="details-container font-syne">
-            <h1 class="username">Shrey Jaiswal</h1>
-            <h5 class="usermail">shrey.jaiswal.23cse@bmu.edu.in</h5>
-        </div>
-    </main>
+    </div>
 
     <footer class="player">
         <div class="player-albuminfo">
