--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -45,7 +45,9 @@
 <body>
     <nav class="navbar">
         <div class="logo-container" id="logo-home">
-            <img src="../assets/Beat.it White Logo.png" alt="Beat.it Logo" width="60px" height="60px">
+            <a href="HomePage.html">
+                <img src="../assets/Beat.it White Logo.png" alt="Beat.it Logo" width="60px" height="60px">
+            </a>
         </div>
 
         <form class="searchbar" action="SearchPage.html">
@@ -183,11 +185,13 @@
             <h1 id="album-heading">Albums</h1>
             <div id="album-list">
                 <div class="album-row">
-                    <div class="album-row-item">
-                        <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="album-cover"
-                            alt="Album Cover: Veer Zaara" width="145px" height="145px">
-                        <p class="album-title font-syne">Veer Zaara</p>
-                    </div>
+                    <a href="albumPage.html">
+                        <div class="album-row-item">
+                            <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="album-cover"
+                                alt="Album Cover: Veer Zaara" width="145px" height="145px">
+                            <p class="album-title font-syne">Veer Zaara</p>
+                        </div>
+                    </a>
                     <div class="album-row-item">
                         <img src="../assets/home/Album Cover - 2.png" class="album-cover" alt="Album Cover: Abbey Road"
                             width="145px" height="145px">
