--- a/src/pages/albumPage.html
+++ b/src/pages/albumPage.html
@@ -90,7 +90,7 @@
                                 <p>1</p>
                             </div>
                             <div class="songName">
-                                <p>Main Yahan Hoon</p>
+                                <p>Do Pal</p>
                             </div>
                         </div>
                         <div class="rightTile">
@@ -105,7 +105,7 @@
                     <div class="songTile">
                         <div class="leftTile">
                             <div class="index">
-                                <p>1</p>
+                                <p>2</p>
                             </div>
                             <div class="songName">
                                 <p>Main Yahan Hoon</p>
@@ -123,10 +123,10 @@
                     <div class="songTile">
                         <div class="leftTile">
                             <div class="index">
-                                <p>1</p>
+                                <p>3</p>
                             </div>
                             <div class="songName">
-                                <p>Main Yahan Hoon</p>
+                                <p>Tere Liye</p>
                             </div>
                         </div>
                         <div class="rightTile">
