added LikedSongs page and linked it

--- a/src/pages/ProfilePage.html
+++ b/src/pages/ProfilePage.html
@@ -60,9 +60,12 @@
                 <h5 class="usermail">shrey.jaiswal.23cse@bmu.edu.in</h5>
             </div>
         </main>
+        <a href="../pages/LikedSongs.html">
         <div class="likedsongs">
             <img src="../assets/Liked Songs Logo.png">
+            
         </div>
+        </a>
     </div>
 
     <footer class="player">
