--- a/src/pages/LikedSongs.html
+++ b/src/pages/LikedSongs.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../modular_styles/profileStyles.css" media="print" onload="this.media='all'">
     <script src="../scripts/script.js" defer></script>
     <script src="../scripts/music.js"></script>
+    <script src="../scripts/likedsongs.js"></script>
 
     
 
