--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -260,7 +260,9 @@
                 <i id = "hamburger" class="fa-solid fa-bars"></i>
             </div>
             <div class="volume">
-                <i id = "volIcon" class="fa-solid fa-volume-high"></i>
+                <button class="volIcon" id = "volIcon">
+                    <i class="fa-solid fa-volume-high"></i>
+                </button>
                 <div class="volume-bar">
                     <input id = "volBar" type="range" class="slider" min = "0" max = "100" value = "0">
                 </div>
