--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -247,7 +247,9 @@
             </div>
         
             <div class="controls">
-                <button class="controlBtns" id = "shufBtn"><i class="fas fa-random shuffle"></i></button> <!-- Shuffle -->
+                <button class="controlBtns" id = "autoPlayToggle">
+                    <i class="fa-solid fa-toggle-off"></i>
+                </button> <!-- Auto Play Next -->
                 <button class="controlBtns" id = "prevBtn"><i class="fas fa-step-backward reverse"></i></button> <!-- Reverse -->
                 <button class="controlBtns" id = "playBtn"><i class="fa-solid fa-play"></i></button> <!-- Play -->
                 <button class="controlBtns" id = "fwdBtn"><i class="fas fa-step-forward forward"></i></button> <!-- Forward -->
