--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -242,7 +242,7 @@
         <div class="playbar">
             <div class="progress-bar">
                 <div id = "currentTime" class="currentTime font-inter">0:00</div>
-                <input type="range" id = "seekBar" class="slider" min = "0" max = "100" value = "0">
+                <input type="range" id = "seekBar" class="seekBar" min = "0" max = "100" value = "0">
                 <div id = "totalTime" class="totalTime font-inter">2:40</div>
             </div>
         
@@ -272,7 +272,7 @@
         </div>  
     </footer>
 
-    <div class="playlist">
+    <!-- <div class="playlist">
         <div class="songTile">
             <p class="font-inter">1. SONG 1</p>
         </div>
@@ -285,6 +285,6 @@
         <div class="songTile">
             <p class="font-inter">1. SONG 1</p>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
