--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -79,7 +79,7 @@
             <h1 id="song-heading">Songs</h1>
             <div id="song-list">
                 <div class="song-row-1">
-                    <div class="song-row-item">
+                    <div class="song-row-item" id="OneMoreTime">
                         <img src="../assets/home/Song Cover - 1.png" class="song-cover" alt="Song Cover: One More Time"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
@@ -87,44 +87,44 @@
                             <div class="album-name">Daft Punk</div>
                         </div>
                     </div>
-                    <div class="song-row-item">
-                        <img src="../assets/home/Song Cover - 1.png" class="song-cover" alt="Song Cover: One More Time"
+                    <div class="song-row-item" id="MainYahanHoon">
+                        <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="song-cover" alt="Song Cover: Main Yahan Hoon"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
-                            <div class="song-title">One More Time</div>
-                            <div class="album-name">Daft Punk</div>
+                            <div class="song-title">Main Yahan Hoon</div>
+                            <div class="album-name">Veer Zaara</div>
                         </div>
                     </div>
-                    <div class="song-row-item">
-                        <img src="../assets/home/Song Cover - 1.png" class="song-cover" alt="Song Cover: One More Time"
+                    <div class="song-row-item" id="Something">
+                        <img src="../assets/home/Song Cover - 2.png" class="song-cover" alt="Song Cover: Something"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
-                            <div class="song-title">One More Time</div>
-                            <div class="album-name">Daft Punk</div>
+                            <div class="song-title">Something</div>
+                            <div class="album-name">The Beatles</div>
                         </div>
                     </div>
-                    <div class="song-row-item">
-                        <img src="../assets/home/Song Cover - 1.png" class="song-cover" alt="Song Cover: One More Time"
+                    <div class="song-row-item" id="TereLiye">
+                        <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="song-cover" alt="Song Cover: Tere Liye"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
-                            <div class="song-title">One More Time</div>
-                            <div class="album-name">Daft Punk</div>
+                            <div class="song-title">Tere Liye</div>
+                            <div class="album-name">Veer Zaara</div>
                         </div>
                     </div>
-                    <div class="song-row-item">
-                        <img src="../assets/home/Song Cover - 1.png" class="song-cover" alt="Song Cover: One More Time"
+                    <div class="song-row-item" id="Haareya">
+                        <img src="../assets/images/Meri_Pyaari_Bindu.jpg" class="song-cover" alt="Song Cover: Haareya"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
-                            <div class="song-title">One More Time</div>
-                            <div class="album-name">Daft Punk</div>
+                            <div class="song-title">Haareya</div>
+                            <div class="album-name">Meri Pyaari Bindu</div>
                         </div>
                     </div>
-                    <div class="song-row-item">
-                        <img src="../assets/home/Song Cover - 1.png" class="song-cover" alt="Song Cover: One More Time"
+                    <div class="song-row-item" id="Do Pal">
+                        <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="song-cover" alt="Song Cover: Do Pal"
                             width="75px" height="75px">
                         <div class="title-artist font-syne">
-                            <div class="song-title">One More Time</div>
-                            <div class="album-name">Daft Punk</div>
+                            <div class="song-title">Do Pal</div>
+                            <div class="album-name">Veer Zaara</div>
                         </div>
                     </div>
                 </div>
@@ -260,9 +260,9 @@
         </div>
 
         <div class="other-controls">
-            <div class="menu"> <!-- More Options -->
+            <!-- <div class="menu">
                 <i id = "hamburger" class="fa-solid fa-bars"></i>
-            </div>
+            </div> -->
             <div class="volume">
                 <button class="volIcon" id = "volIcon">
                     <i class="fa-solid fa-volume-high"></i>
