--- a/src/pages/HomePage.html
+++ b/src/pages/HomePage.html
@@ -185,6 +185,13 @@
             <h1 id="album-heading">Albums</h1>
             <div id="album-list">
                 <div class="album-row">
+                    <a href="library.html">
+                        <div class="album-row-item">
+                            <img src="../assets/images/library.png" class="album-cover" alt="Album Cover: Library"
+                                width="145px" height="145px">
+                            <p class="album-title font-syne">Library</p>
+                        </div>
+                    </a>
                     <a href="albumPage.html">
                         <div class="album-row-item">
                             <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" class="album-cover"
@@ -192,11 +199,6 @@
                             <p class="album-title font-syne">Veer Zaara</p>
                         </div>
                     </a>
-                    <div class="album-row-item">
-                        <img src="../assets/home/Album Cover - 2.png" class="album-cover" alt="Album Cover: Abbey Road"
-                            width="145px" height="145px">
-                        <p class="album-title font-syne">Abbey Road</p>
-                    </div>
                     <div class="album-row-item">
                         <img src="../assets/home/Album Cover - 3.png" class="album-cover"
                             alt="Album Cover: Random Access Memories" width="145px" height="145px">
