--- a/src/pages/library.html
+++ b/src/pages/library.html
@@ -36,7 +36,7 @@
 <script src="../scripts/script.js" defer></script>
 <script src="../scripts/music.js"></script>
 <link rel="shortcut icon" type="image/x-icon" href="../assets/browserIcon.ico" />
-<link rel="stylesheet" href="albumPage.css" media="print" onload="this.media='all'">
+<link rel="stylesheet" href="library.css" media="print" onload="this.media='all'">
 
 </head>
 <body>
@@ -137,90 +137,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="songTile">
-                        <div class="leftTile">
-                            <div class="index">
-                                <p>1</p>
-                            </div>
-                            <div class="songName">
-                                <p>Main Yahan Hoon</p>
-                            </div>
-                        </div>
-                        <div class="rightTile">
-                            <div class="duration">
-                                <p>2:43</p>
-                            </div>
-                            <div class="heartIcon">
-                                <button class="heart"><i class="fa-regular fa-heart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="songTile">
-                        <div class="leftTile">
-                            <div class="index">
-                                <p>1</p>
-                            </div>
-                            <div class="songName">
-                                <p>Main Yahan Hoon</p>
-                            </div>
-                        </div>
-                        <div class="rightTile">
-                            <div class="duration">
-                                <p>2:43</p>
-                            </div>
-                            <div class="heartIcon">
-                                <button class="heart"><i class="fa-regular fa-heart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="songTile">
-                        <div class="leftTile">
-                            <div class="index">
-                                <p>1</p>
-                            </div>
-                            <div class="songName">
-                                <p>Main Yahan Hoon</p>
-                            </div>
-                        </div>
-                        <div class="rightTile">
-                            <div class="duration">
-                                <p>2:43</p>
-                            </div>
-                            <div class="heartIcon">
-                                <button class="heart"><i class="fa-regular fa-heart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="songTile">
-                        <div class="leftTile">
-                            <div class="index">
-                                <p>1</p>
-                            </div>
-                            <div class="songName">
-                                <p>Main Yahan Hoon</p>
-                            </div>
-                        </div>
-                        <div class="rightTile">
-                            <div class="duration">
-                                <p>2:43</p>
-                            </div>
-                            <div class="heartIcon">
-                                <button class="heart"><i class="fa-regular fa-heart"></i></button>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="right">
                 <div class="albumArt">
-                    <img src="../assets/images/ab67616d0000b27396fa496a2cfc301430589024.jpeg.jpg" alt="">
+                    <img src="../assets/images/library.png" alt="">
                 </div>
                 <div class="albumDesc font-montserrat">
                     <div class="albName">
-                        <p>Veer Zaara</p>
+                        <p>The Beat.itLibrary</p>
                     </div>
                     <div class="artist">
-                        <p>Madan Mohan</p>
+                        <p>View all your songs in one place</p>
                     </div>
                 </div>
             </div>
