--- a/src/pages/albumPage.html
+++ b/src/pages/albumPage.html
@@ -83,7 +83,7 @@
                     </button>
                 </div>
                 <div class="songPanel font-inter">
-                    <div class="songTile">
+                    <!-- <div class="songTile">
                         <div class="leftTile">
                             <div class="index">
                                 <p>1</p>
@@ -100,115 +100,7 @@
                                 <button class="heart"><i class="fa-regular fa-heart"></i></button>
                             </div>
                         </div>
-                    </div>
-                    <div class="songTile">
-                        <div class="leftTile">
-                            <div class="index">
-                                <p>2</p>
-                            </div>
-                            <div class="songName">
-                                <p>Main Yahan Hoon</p>
-                            </div>
-                        </div>
-                        <div class="rightTile">
-                            <div class="duration">
-                                <p>2:43</p>
-                            </div>
-                            <div class="heartIcon">
-                                <button class="heart"><i class="fa-regular fa-heart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="songTile">
-                        <div class="leftTile">
-                            <div class="index">
-                                <p>3</p>
-                            </div>
-                            <div class="songName">
-                                <p>Tere Liye</p>
-                            </div>
-                        </div>
-                        <div class="rightTile">
-                            <div class="duration">
-                                <p>2:43</p>
-                            </div>
-                            <div class="heartIcon">
-                                <button class="heart"><i class="fa-regular fa-heart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="songTile">
-                        <div class="leftTile">
-                            <div class="index">
-                                <p>1</p>
-                            </div>
-                            <div class="songName">
-                                <p>Main Yahan Hoon</p>
-                            </div>
-                        </div>
-                        <div class="rightTile">
-                            <div class="duration">
-                                <p>2:43</p>
-                            </div>
-                            <div class="heartIcon">
-                                <button class="heart"><i class="fa-regular fa-heart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="songTile">
-                        <div class="leftTile">
-                            <div class="index">
-                                <p>1</p>
-                            </div>
-                            <div class="songName">
-                                <p>Main Yahan Hoon</p>
-                            </div>
-                        </div>
-                        <div class="rightTile">
-                            <div class="duration">
-                                <p>2:43</p>
-                            </div>
-                            <div class="heartIcon">
-                                <button class="heart"><i class="fa-regular fa-heart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="songTile">
-                        <div class="leftTile">
-                            <div class="index">
-                                <p>1</p>
-                            </div>
-                            <div class="songName">
-                                <p>Main Yahan Hoon</p>
-                            </div>
-                        </div>
-                        <div class="rightTile">
-                            <div class="duration">
-                                <p>2:43</p>
-                            </div>
-                            <div class="heartIcon">
-                                <button class="heart"><i class="fa-regular fa-heart"></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="songTile">
-                        <div class="leftTile">
-                            <div class="index">
-                                <p>1</p>
-                            </div>
-                            <div class="songName">
-                                <p>Main Yahan Hoon</p>
-                            </div>
-                        </div>
-                        <div class="rightTile">
-                            <div class="duration">
-                                <p>2:43</p>
-                            </div>
-                            <div class="heartIcon">
-                                <button class="heart"><i class="fa-regular fa-heart"></i></button>
-                            </div>
-                        </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="right">
