--- a/src/pages/library.html
+++ b/src/pages/library.html
@@ -34,6 +34,7 @@
 
 <link rel="stylesheet" href="../modular_styles/profileStyles.css" media="print" onload="this.media='all'">
 <script src="../scripts/script.js" defer></script>
+<script src="../scripts/library.js" defer></script>
 <script src="../scripts/music.js"></script>
 <link rel="shortcut icon" type="image/x-icon" href="../assets/browserIcon.ico" />
 <link rel="stylesheet" href="library.css" media="print" onload="this.media='all'">
